--- a/index.html
+++ b/index.html
@@ -1,16 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>备用入口</title>
-  <meta http-equiv="refresh" content="3;url=https://thehoshi.info">
-  <!-- 3 秒后自动跳转，也可以改成 0 立即跳转 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>网站服务迁移公告 | The Hoshi</title>
+  
+
+  <meta http-equiv="refresh" content="0;url=https://thehoshi.info">
+  <meta name="description" content="本站点已迁移至新域名，请点击链接访问最新内容。">
+  
   <style>
-    body { font-family: sans-serif; text-align: center; padding-top: 50px; }
+    :root {
+      --primary-color: #007bff;
+      --bg-color: #f8f9fa;
+      --text-color: #333;
+    }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      padding: 20px;
+    }
+    .container {
+      background: #fff;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      text-align: center;
+      max-width: 500px;
+      width: 100%;
+    }
+    h1 { font-size: 24px; margin-bottom: 20px; color: #2c3e50; }
+    p { font-size: 16px; line-height: 1.6; color: #666; margin-bottom: 30px; }
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: var(--primary-color);
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .btn:hover { background-color: #0056b3; }
+    .footer { margin-top: 20px; font-size: 12px; color: #999; }
+    .loader {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid var(--primary-color);
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      animation: spin 1s linear infinite;
+      margin: 0 auto 20px auto;
+    }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
+
+  <script>
+    function redirect() {
+      window.location.replace("https://thehoshi.info");
+    }
+    window.onload = function() {
+      setTimeout(redirect, 50);
+    };
+  </script>
 </head>
 <body>
-  <h2>正在跳转到备用站点……</h2>
-  <p>如果未自动跳转，请 <a href="https://thehoshi.info">点击这里</a></p>
+
+  <div class="container">
+    <div class="loader"></div>
+    <h1>站点服务已迁移</h1>
+    <p>为了提供更稳定的服务，我们的网站已迁移至新域名。<br>系统正在为您自动跳转，请稍候...</p>
+    
+    <a href="https://thehoshi.info" class="btn">立即前往新站点</a>
+    
+    <div class="footer">
+      <p>如果您的浏览器没有响应，请点击上方按钮。</p>
+    </div>
+  </div>
+
 </body>
 </html>
